# Smart_Cane_AI

./: .env.example  .gitignore  ANALYZE_NOW.bat  ARCHITECTURE.md  ARCHITECTURE_FIX.md  BLUE_PATH_UPDATE.md  BUGFIX_SUMMARY.md  COMPLETE_FLOW_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  LATENCY_OPTIMIZATION_PLAN.md  LATENCY_REDUCTION_ALTERNATIVES.md  OBSTACLE_CLASSIFICATION_FIX.md  PHONE_DEPLOYMENT_GUIDE.md  PROJECT_VALIDATION_REPORT.md  Procfile  README.md  RENDER_DEPLOYMENT.md  RUN_GUIDE.md  START_PHONE_SERVER.bat  VIDEO_ANALYSIS_README.md  VIDEO_PROCESSING_GUIDE.md  WALKING_GUIDE.md  analyze_recording.bat  analyze_video_output.py  analyze_videos.py  compare_models.py  detailed_latency_analysis.py  diagnostic.bat  phone_client.html  phone_server.py  phone_server_cloud.py  process_video.py  process_video_debug.py  process_videos_with_overlay.py  pyproject.toml  pytest_out.txt  quick_video_analysis.py  railway.toml  render.yaml  (+4 more)
config/: cityscapes_train.yaml  default.yaml  phrases.yaml
navigation/: __init__.py  cli.py  config.py  models.py
scripts/: bench_models.py  create_sample_fixture.py  export_onnx.py  export_pipeline_videos.py  export_segformer_onnx.py  fast_demo.bat  fast_preview.bat  install_tts.bat  list_cameras.py  render_architecture.py  smoke_cmd.bat  smoke_segformer.py  train_semantic.py
tests/: test_alerts.py  test_care_heuristic.py  test_composer.py  test_depth_external.py  test_distance.py  test_hazard_labels.py  test_heuristic.py  test_hud.py  test_maps.py  test_mask_metrics.py  test_performance.py  test_phone_server.py  test_runner.py  (+9 more)
(+37 files in other folders)
